Add TestnorgeIdentUtility and refactor PDL order handling
Introduced the utility class TestnorgeIdent for handling Testnorge identifiers. Improved the PdlArtifact and OrdreResponseDTO classes along with other modifications to enhance the management of orders for Personal Data Logging (PDL). Additional checks for null and conditions have been implemented for better data handling.